Fix spacing errors and remove extra f's

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,10 @@
 html {
-  box-sizing: border-box;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-  font: normal 100%/1.3;
-  font-family: 'IBM Plex Serif', serif;
+  font-family: "IBM Plex Serif", serif;
   background-color: #d3d3d3;
 }
 
 .limelight {
-  font-family: 'Bitter', serif;
+  font-family: Bitter, serif;
 }
 .cards {
   background-color: #179482;
@@ -34,21 +28,23 @@ html {
   }
 
   p {
-    color: #ffffff;
+    color: #fff;
   }
 
   .last:hover {
     background-color: #ffff10;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
 
   html {
-    background-color: #ffffff;
+    background-color: #fff;
   }
 
   .last:hover {
-    background-color: #ffffff;
+    background-color: #fff;
   }
+
 }
